RESOLVED FIXED212272
Excessive hang time in iOS Safari under waitForDidUpdateActivityState
https://bugs.webkit.org/show_bug.cgi?id=212272
Summary Excessive hang time in iOS Safari under waitForDidUpdateActivityState
Tim Horton
Reported 2020-05-22 12:29:10 PDT
Excessive hang time in iOS Safari under waitForDidUpdateActivityState
Attachments
Patch (2.03 KB, patch)
2020-05-22 12:29 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2020-05-22 12:29:21 PDT
Tim Horton
Comment 2 2020-05-22 12:29:23 PDT
EWS
Comment 3 2020-05-22 13:33:35 PDT
Committed r262071: <https://trac.webkit.org/changeset/262071> All reviewed patches have been landed. Closing bug and clearing flags on attachment 400064 [details].
Note You need to log in before you can comment on or make changes to this bug.