Excessive hang time in iOS Safari under waitForDidUpdateActivityState https://bugs.webkit.org/show_bug.cgi?id=212272 <rdar://problem/62787789>

Reviewed by Andy Estes.

* UIProcess/RemoteLayerTree/RemoteLayerTreeDrawingAreaProxy.mm:
(WebKit::RemoteLayerTreeDrawingAreaProxy::waitForDidUpdateActivityState):
Make the view state change timeout equivalent on iOS and macOS.

We believe that it is preferable to paint white than block the UI
process main thread for half a second. Reduce the timeout on iOS
to be the same as it has been for years on macOS.


Canonical link: https://commits.webkit.org/225138@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262071 268f45cc-cd09-0410-ab3c-d52691b4dbfc